# nvim_cpp_setup

./: CMakeLists.txt  Dockerfile  Makefile  rework.py
.cache/clangd/index/: main.cpp.E7820B3F3FC891E4.idx  simple.cpp.6F4EC17C8A4D42CB.idx  simple.h.7AEFE4AF37AD5D84.idx
include/: simple.h
src/: main.cpp  simple.cpp
